7902254: Remove unnecessary array creation for varargs parameters, part 2
Reviewed-by: jjg